--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1 class="font-bold underline text-red-500">Hello World</h1>
-<router-outlet />
+<app-header></app-header>
+<main class="min-h-[70vh]">
+  <router-outlet />
+  <app-fab-buttons></app-fab-buttons>
+</main>
+<app-footer></app-footer>
